--- a/images/hypervisor/files/postfix_main.j2
+++ b/images/hypervisor/files/postfix_main.j2
@@ -43,7 +43,7 @@ alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 mydestination = $myhostname, localhost
 relayhost = [{{ mail_relayhost }}]:{{ mail_relayport }}
-mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
+mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128 192.168.100.0/24
 mailbox_size_limit = 0
 recipient_delimiter = +
 inet_interfaces = all
